<resources>
    <string name="app_name">boye</string>
    <string name="action_settings">About</string>
    <string name="history">
        "The Caesar cipher is named after Julius Caesar, who, according to Suetonius, used it with a shift of three to protect messages of military significance. While Caesar's was the first recorded use of this scheme, other substitution ciphers are known to have been used earlier.\n\n"

        "It is unknown how effective the Caesar cipher was at the time, but it is likely to have been reasonably secure, not least because most of Caesar's enemies would have been illiterate and others would have assumed that the messages were written in an unknown foreign language. There is no record at that time of any techniques for the solution of simple substitution ciphers. The earliest surviving records date to the 9th century works of Al-Kindi in the Arab world with the discovery of frequency analysis.\n\n"

        "A Caesar cipher with a shift of one is used on the back of the mezuzah to encrypt the names of God. This may be a holdover from an earlier time when Jewish people were not allowed to have mezuzot. The letters of the cryptogram themselves comprise a religiously significant "divine name" which Orthodox belief holds keeps the forces of evil in check.\n\n"

        "In the 19th century, the personal advertisements section in newspapers would sometimes be used to exchange messages encrypted using simple cipher schemes. Kahn (1967) describes instances of lovers engaging in secret communications enciphered using the Caesar cipher in The Times.[10] Even as late as 1915, the Caesar cipher was in use: the Russian army employed it as a replacement for more complicated ciphers which had proved to be too difficult for their troops to master; German and Austrian cryptanalysts had little difficulty in decrypting their messages.\n\n"

        "Caesar ciphers can be found today in children's toys such as secret decoder rings. A Caesar shift of thirteen is also performed in the ROT13 algorithm, a simple method of obfuscating text widely found on Usenet and used to obscure text (such as joke punchlines and story spoilers), but not seriously used as a method of encryption.\n\n"

        "A construction of 2 rotating disks with a Caesar cipher can be used to encrypt or decrypt the code.\n\n"

        "The Vigenère cipher uses a Caesar cipher with a different shift at each position in the text; the value of the shift is defined using a repeating keyword. If the keyword is as long as the message, chosen random, never becomes known to anyone else, and is never reused, this is the one-time pad cipher, proven unbreakable. The conditions are so difficult they are, in practical effect, never achieved. Keywords shorter than the message (e.g., "Complete Victory" used by the Confederacy during the American Civil War), introduce a cyclic pattern that might be detected with a statistically advanced version of frequency analysis."
    </string>
    <string name="julius_caesar">Julius Caesar</string>
    <string name="history_heading">HISTORY</string>
    <string name="enter_text_to_decrypt">Enter encrypted message to read</string>
    <string name="display">Display</string>
    <string name="clear">Clear</string>
    <string name="enter_text_to_encrypt">Enter message to hide</string>
    <string name="encrypt">Hide Message</string>
    <string name="decrypt">Show Message</string>
    <string name="select_key">Select Key</string>
    <string name="encrypted_message">Hidden Message</string>
    <string name="decrypted_message">Original Message</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Encryption</string>
    <string name="title_dashboard">Decryption</string>
    <string name="title_notifications">About</string>
    <string name="boye_1_0_0">ɓoye 1.0.0</string>
    <string name="boye">ɓoye</string>
    <string name="paste">Paste</string>
    <string name="boye_details">ɓoye is an Android app that helps you encrypt, decrypt and share your text using Caeser Cipher.</string>
</resources>
